--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^12",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@wojtekmaj/async-array-utils": "^1.7.0",
+    "@wojtekmaj/react-hooks": "^1.17.2",
+    "cross-env": "^7.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-pdf": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-window": "^1.8.5",
+    "babel-jest": "^29.6.1",
+    "pdf2json": "^3.0.4",
+    "pdfjs-dist": "^3.8.162"
   }
 }
