--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier . --write",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet --fix"
   },
   "browserslist": {
     "production": [
