--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "@wojtekmaj/async-array-utils": "^1.7.0",
     "@wojtekmaj/react-hooks": "^1.17.2",
     "cross-env": "^7.0.3",
+    "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pdf": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.9",
+    "screenfull": "^6.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -93,7 +95,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.5.5",
     "pdf2json": "^3.0.4",
-    "pdfjs-dist": "^3.8.162",
+    "pdfjs-dist": "^3.9.179",
     "prettier": "^3.0.0"
   }
 }
